# dyson_demo_motion_planning_servers

./: CMakeLists.txt  package.xml
ur16e_move_server/: CMakeLists.txt  package.xml
ur16e_move_server/action/: MoveToPose.action
ur16e_move_server/launch/: bringup.launch.py
ur16e_move_server/scripts/: send_goal.py
ur16e_move_server/src/: move_to_pose_server.cpp
ur16e_with_gripper_description/: CMakeLists.txt  end_effector_srdf.xml  package.xml
ur16e_with_gripper_description/launch/: view_robot.launch.py
ur16e_with_gripper_description/meshes/: suction_gripper.STL
ur16e_with_gripper_description/urdf/: suction_gripper.xacro  ur16e_with_suction_gripper.xacro
ur_moveit_rws_gripper_config/: CMakeLists.txt  package.xml
ur_moveit_rws_gripper_config/config/: ompl_planning.yaml
ur_moveit_rws_gripper_config/launch/: ur_moveit.launch.py
ur_moveit_rws_gripper_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
